# GeneralsModdingeXtended

./: .gitignore  GeneralsModdingeXtendedMD.code-workspace  GeneralsModdingeXtendedWW2030.code-workspace  README.md  merge-community-batch.ps1
.github/workflows/: static.yml  sync-docs-to-wiki.yml
Core/GameEngine/: CMakeLists.txt
Docs/: DocAuthoringGuide.md  Gemfile  README.md  _config.yml
Docs/INI/: Armor.md  CommandButton.md  CommandMapDebug.md  DamageFX.md  DrawGroupInfo.md  FXList.md  GameData.md  GameDataDebug.md  GameLOD.md  Index.md  MiscAudio.md  Mouse.md  ObjectCreationList.md  PlayerTemplate.md  ProductionPrerequisite.md  ScriptingSystem.md  SoundEffects.md  TechBuildings.md  Upgrade.md  WeaponSet.md  Weather.md
Docs/ObjectBody/: ActiveBody.md  HighlanderBody.md  HiveStructureBody.md  ImmortalBody.md  InactiveBody.md  StructureBody.md  UndeadBody.md
Docs/ObjectComponents/: CommunicationComponent.md  Component.md  ElectronicsComponent.md  EngineComponent.md  InventoryStorageComponent.md  JetEngineComponent.md  PowerComponent.md  RemoteControlComponent.md  SensorComponent.md  TurretComponent.md  VisionComponent.md  WeaponComponent.md
Docs/ObjectModules/: ActiveBody.md
Docs/ObjectUpgrades/: MaxHealthUpgrade.md
Docs/Prerequisites/: ProductionPrerequisite.md
Docs/_site/: 404.html  DocAuthoringGuide.html  (+2 more)
GeneralsMD/Code/Tools/ScriptExport/: CMakeLists.txt  ScriptExport.cpp  ScriptParser.cpp  ScriptParser.h  ScriptTypes.h  ScriptWriter.cpp  ScriptWriter.h  StdAfx.h  ValidateRoundTrip.cpp  YamlEmitter.cpp  YamlEmitter.h  YamlParser.cpp  YamlParser.h
(+930 files in other folders)
